Added a filter with the name PreventDuplicateRequest to prevent visitors from spamming the create button. i found it here ---->https://stackoverflow.com/questions/4250604/how-do-i-prevent-multiple-form-submission-in-net-mvc-without-using-javascript

--- a/Weather Note/Weather Note.csproj
+++ b/Weather Note/Weather Note.csproj
@@ -161,6 +161,7 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Context\NoteContext.cs" />
+    <Compile Include="Models\Filter\PreventDuplicateRequestAttribute.cs" />
     <Compile Include="Models\Initializers\WheatherNoteInitializer.cs" />
     <Compile Include="Models\Interface\INote.cs" />
     <Compile Include="Models\POCO\Note.cs" />
